[tool.poetry]
name = "seek-test"
version = "0.1.0"
description = ""
authors = ["Robert MW"]
readme = "README.md"
packages = [{include = "seek_test"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"
pytest = "^7.2.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
