[tool.poetry]
name = "seek-test"
version = "0.1.0"
description = ""
authors = ["Robert MW"]
readme = "README.md"
packages = [{include = "seek_traffic"}]

[tool.poetry.dependencies]
python = "^3.10"
pyspark = "^3.3.2"


[tool.poetry.group.test.dependencies]
pytest = "^7.2.2"


[tool.poetry.group.dev.dependencies]
pylint = "^2.17.0"
black = "^23.1.0"
isort = "^5.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
